--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js",
+    "build": "npm install && npm install --prefix Frontend && npm run build --prefix Frontend"
   },
   "keywords": [
     "MERN"
   ],
-  "author": "Akhilesh",
+  "author": "Uttam",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
